--- a/WebTemplatesTn/Web.config
+++ b/WebTemplatesTn/Web.config
@@ -4,6 +4,12 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+   <connectionStrings>
+    <!--<add name="ControlcBDEntities" connectionString="metadata=res://*/BL.ModeloSistema.csdl|res://*/BL.ModeloSistema.ssdl|res://*/BL.ModeloSistema.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CROMERO\SQLEXPRESS;initial catalog=bdbasic;persist security info=True;user id=adminservertaxi;password=adm1ns3rv3rtaxi*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="ControlcBDEntities" connectionString="metadata=res://*/ModeloSistema.csdl|res://*/ModeloSistema.ssdl|res://*/ModeloSistema.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CROMERO\SQLEXPRESS;initial catalog=ControlcBD;persist security info=True;user id=adminservertaxi;password=adm1ns3rv3rtaxi*;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <!--<add name="BdService" connectionString="data source = CROMERO\SQLEXPRESS;persist security info=True;user id = adminservertaxi; password=adm1ns3rv3rtaxi*; Initial Catalog=bdbasic;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="BdFile" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ControlB-20171217092616.mdf;Initial Catalog=aspnet-ControlB-20171217092616;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
