--- a/WebTemplatesTn/WebTemplatesTn.csproj
+++ b/WebTemplatesTn/WebTemplatesTn.csproj
@@ -238,6 +238,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="EstructuraTabla.cs" />
+    <Compile Include="GeneradorControladorCatalogo.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GeneradorControladorCatalogo.tt</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -254,6 +259,10 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="GeneradorControladorCatalogo.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>GeneradorControladorCatalogo.cs</LastGenOutput>
+    </Content>
     <Content Include="GeneradorVistaCatalogo.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>GeneradorVistaCatalogo.cshtml</LastGenOutput>
